--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,70 +1,71 @@
-name: 🐛 Bug Report
-description: Report a bug or unexpected behavior in AppClipsStudio
-title: "[BUG] "
-labels: ["bug", "needs-triage"]
-assignees: 
-  - muhittincamdali
+name: Bug Report
+description: File a bug report to help us improve
+title: "[Bug]: "
+labels: ["bug", "triage"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report for AppClipsStudio!
+        Thanks for taking the time to fill out this bug report!
 
   - type: textarea
-    id: what-happened
+    id: description
     attributes:
-      label: What happened?
-      description: A clear and concise description of the bug
-      placeholder: Tell us what you see!
+      label: Bug Description
+      description: A clear and concise description of what the bug is.
+      placeholder: Tell us what happened
     validations:
       required: true
 
   - type: textarea
-    id: expected-behavior
+    id: reproduction
     attributes:
-      label: Expected behavior
-      description: A clear description of what you expected to happen
-      placeholder: What should have happened instead?
-    validations:
-      required: true
-
-  - type: textarea
-    id: reproduction-steps
-    attributes:
-      label: Steps to reproduce
+      label: Steps to Reproduce
       description: Steps to reproduce the behavior
       placeholder: |
-        1. Import AppClipsStudio
-        2. Create an AppClip configuration
-        3. Call method X
-        4. See error
+        1. Define route with...
+        2. Navigate to...
+        3. See unexpected behavior
     validations:
       required: true
 
   - type: textarea
-    id: code-sample
+    id: expected
     attributes:
-      label: Code sample
-      description: Please provide a minimal code example that reproduces the issue
-      render: swift
-      placeholder: |
-        import AppClipsStudio
-        
-        let core = AppClipCore.shared
-        // Your code here
+      label: Expected Behavior
+      description: A clear and concise description of what you expected to happen.
     validations:
-      required: false
+      required: true
+
+  - type: textarea
+    id: code
+    attributes:
+      label: Code Sample
+      description: If applicable, add a minimal code sample to reproduce the issue
+      render: swift
 
   - type: dropdown
-    id: version
+    id: navigation-type
     attributes:
-      label: AppClipsStudio Version
-      description: What version of AppClipsStudio are you running?
+      label: Navigation Type
+      multiple: true
       options:
-        - "1.0.0 (latest)"
-        - "0.9.x"
-        - "0.8.x"
-        - "Other (please specify in additional context)"
+        - Push Navigation
+        - Modal Presentation
+        - Tab Navigation
+        - Deep Link
+        - Sheet/Popover
+    validations:
+      required: true
+
+  - type: dropdown
+    id: swift-version
+    attributes:
+      label: Swift Version
+      options:
+        - "5.9"
+        - "5.10"
+        - "6.0"
     validations:
       required: true
 
@@ -72,67 +73,35 @@ body:
     id: platform
     attributes:
       label: Platform
-      description: What platform are you seeing the problem on?
       multiple: true
       options:
         - iOS
         - macOS
-        - watchOS
         - tvOS
+        - watchOS
         - visionOS
     validations:
       required: true
 
   - type: input
-    id: ios-version
+    id: os-version
     attributes:
-      label: iOS/Platform Version
-      description: What version of iOS/platform are you running?
-      placeholder: "e.g., iOS 18.0, macOS 14.0"
-    validations:
-      required: true
-
-  - type: input
-    id: xcode-version
-    attributes:
-      label: Xcode Version
-      description: What version of Xcode are you using?
-      placeholder: "e.g., Xcode 15.0"
-    validations:
-      required: true
-
-  - type: dropdown
-    id: module
-    attributes:
-      label: Affected Module
-      description: Which AppClipsStudio module is affected?
-      options:
-        - "AppClipCore"
-        - "AppClipRouter"
-        - "AppClipAnalytics"
-        - "AppClipNetworking"
-        - "AppClipUI"
-        - "AppClipStorage"
-        - "AppClipSecurity"
-        - "AppClipTesting"
-        - "Multiple modules"
-        - "Not sure"
+      label: OS Version
+      placeholder: "e.g., iOS 17.0, macOS 14.0"
     validations:
       required: true
 
   - type: textarea
-    id: additional-context
+    id: logs
     attributes:
-      label: Additional context
-      description: Add any other context about the problem here
-    validations:
-      required: false
+      label: Relevant Log Output
+      description: Please copy and paste any relevant log output
+      render: shell
 
   - type: checkboxes
     id: terms
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our Code of Conduct
+      label: Checklist
       options:
-        - label: I agree to follow this project's Code of Conduct
+        - label: I have searched existing issues to ensure this bug hasn't been reported
           required: true
